--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */
+/*! HTML5 Boilerplate v6.0.1 | MIT License | https://html5boilerplate.com/ */
 
 /*
  * What follows is the result of much research on cross-browser styling.
@@ -20,17 +20,19 @@ html {
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
  *
- * These selection rule sets have to be separate.
+ * Vendor-prefixed and regular ::selection selectors cannot be combined:
+ * https://stackoverflow.com/a/16982510/7133471
+ *
  * Customize the background color to match your design.
  */
 
 ::-moz-selection {
-    background: #b3d4fc;
+    background: #a2f1c1;
     text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
+    background: #a2f1c1;
     text-shadow: none;
 }
 
@@ -95,20 +97,226 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+   @keyframes spin {
+       from {transform:rotateX(0deg) rotateY(0deg) rotateZ(0deg)}
+       to {transform:rotateX(360deg) rotateY(360deg) rotateZ(360deg)}
+   }
+
+ .animation .g,  .animation .d,  .animation .two {
+   display: inline-block;
+ }
+
+ .animation {
+    animation:spin 12s linear reverse infinite;
+    display: inline-block;
+    font-size: 30px;
+    position: fixed;
+    right:6vw;
+    top:6vw;
+    transform-style: preserve-3d;
+    font-weight: bold;
+ }
+
+   .animation .g {
+     animation:spin 6s linear -.4s infinite;
+   }
+   .animation .d {
+     animation:spin 6s linear -.8s infinite;
+   }
+   .animation .two {
+     animation:spin 6s linear -1.8s infinite;
+   }
 
 
-body {
-  padding:3em;
+ body {
+   padding:6vw;
+   font-family: monospace;
+   font-family: 'Source Sans Pro', sans-serif;
+   font-size: 18px;
+   line-height: 1.5;
+
+ }
+
+
+
+h1 {
+font-family: 'Playfair Display', serif;
+font-weight: 900;
+font-style: italic;
+font-size: 55px;
+line-height: 1.2;
+
+}
+
+h2 {
+font-size: 34px;
+line-height: 1.2;
+}
+
+h3 {
+font-size: 21px;
+line-height: 1.2;
+font-style: italic;
+}
+
+h4 {
+font-size: 13px;
+}
+
+h5 {
+font-size: 10px;
+}
+
+h2,h3 {
+font-family: 'Playfair Display', serif;
+font-weight: normal;
+}
+
+h4,h5,h6 {
+  font-family: 'Source Code Pro', monospace;
+}
+
+.monospace, a {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 80%;
+
+}
+
+p.small {
+  font-size: 12px;
+}
+
+a {
+  color:inherit;
+  text-decoration: none;
+  padding-bottom: .3em;
+  padding-top: .3em;
+  border-bottom: 1px solid transparent;
+}
+
+a:hover {
+  border-bottom: 1px solid #2d262d;
+}
+
+.strikethrough:before {
+  content:"";
+  height:2px;
+  background:#2d262d;
+  position: absolute;
+  width:120%;
+  margin-top: .7em;
+  transform: rotate(-8deg);
+}
+
+.strikethrough {
+  position: relative;
+}
+
+.main-content-well {
+  max-width: 32em;
+}
+
+ul {
+  list-style: none;
+  padding-left: 1.3em;
+}
+
+
+
+li {
+  margin-bottom:.6em;
+}
+
+ul li:before {
+  content: "•";
+  padding-right: 1em;
+  opacity:.4;
+  margin-left: -1.3em;
+}
+
+ol.timeline {
+  border-left:1px dashed black;
+  margin-left: 2em;
+}
+
+ol li {
+  list-style: none;
+  counter-increment: step-counter;
+  position: relative;
+  margin: 1em 0;
+  display: block;
+}
+
+.inactive {
+  text-decoration: strikethrough;
 }
 
 
 
 
+ol li:before {
+    content:"wk. " counter(step-counter);
+    margin-right: 5px;
+    font-size: 60%;
+    position:absolute;
+    text-align: center;
+    width:3em;
+    margin-left: -5em;
+    margin-top: 0;
+    color:#434343;
+    background:#a2f1c1;
+    padding:.6em 0
+}
 
+.agenda-item {
+  display:block;
+}
 
+.source {
+  font-size: 60%;
+  display: inline-block;
+  border:1px solid rgba(0,0,0,.2);
+  transform:translateY(-.1em);
+  padding:.3em .6em;
+  margin-left:.6em;
+  text-transform: uppercase;
+  border-radius: 100px;
+}
 
+@media (min-width: 800px) {
 
+  .animation {
+     font-size: 100px;
+  }
 
+  p.small {
+    columns: 2;
+    column-gap: 20px;
+  }
+
+.aside-right {
+  float:right;
+  font-size: 70%;
+  margin-right: -20%;
+  margin-left:10%;
+  padding:1em 2em;
+  width:40%;
+  border-left:1px solid rgba(0,0,0,.5);
+}
+
+.aside-left {
+  position:fixed;
+  font-size: 70%;
+  left:0;
+  padding:1em 2em;
+  width:10%;
+}
+
+.main-content-well {
+  margin-left:10%;
+}
+
+}
 
 
 
@@ -127,18 +335,25 @@ body {
 
 /*
  * Hide only visually, but have it available for screen readers:
- * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+ * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+ *
+ * 1. For long content, line feeds are not interpreted as spaces and small width
+ *    causes content to wrap 1 word per line:
+ *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
  */
 
 .visuallyhidden {
     border: 0;
     clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(50%);
+    clip-path: inset(50%);
     height: 1px;
     margin: -1px;
     overflow: hidden;
     padding: 0;
     position: absolute;
     width: 1px;
+    white-space: nowrap; /* 1 */
 }
 
 /*
@@ -150,11 +365,14 @@ body {
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
     clip: auto;
+    -webkit-clip-path: none;
+    clip-path: none;
     height: auto;
     margin: 0;
     overflow: visible;
     position: static;
     width: auto;
+    white-space: inherit;
 }
 
 /*
@@ -213,9 +431,7 @@ body {
 @media print {
     *,
     *:before,
-    *:after,
-    *:first-letter,
-    *:first-line {
+    *:after {
         background: transparent !important;
         color: #000 !important; /* Black prints faster:
                                    http://www.sanbeiji.com/archives/953 */
@@ -246,6 +462,9 @@ body {
         content: "";
     }
 
+    pre {
+        white-space: pre-wrap !important;
+    }
     pre,
     blockquote {
         border: 1px solid #999;
@@ -264,10 +483,6 @@ body {
     tr,
     img {
         page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
     }
 
     p,
