--- a/css/syllabus.css
+++ b/css/syllabus.css
@@ -111,8 +111,8 @@ textarea {
     display: inline-block;
     font-size: 30px;
     position: fixed;
-    right:6vw;
-    top:6vw;
+    right:5vw;
+    bottom:40vh;
     transform-style: preserve-3d;
     font-weight: bold;
  }
@@ -129,7 +129,7 @@ textarea {
 
 
  body {
-   padding:6vw;
+   padding:6vw 80px 6vw 6vw ;
    font-family: monospace;
    color:#2d262d;
    background:#a2f1c1;
@@ -294,6 +294,9 @@ ol li:before {
 
   .animation {
      font-size: 100px;
+     display:block;
+     right:6vw;
+     top:6vw;
   }
 
   p.small {
