--- a/css/assignment.css
+++ b/css/assignment.css
@@ -481,6 +481,7 @@ a.button.active:hover {
 
         .a3-image-illustration {
             transform-style: preserve-3d;
+            transform: perspective(800px);
             position: absolute;
             display:none;
             width:400px;
@@ -544,7 +545,7 @@ a.button.active:hover {
           right:0;
           bottom:0;
           left:0;
-          animation: cloudanimation linear 3s -4s infinite;
+          animation: cloudanimation linear 5s -4s infinite;
         }
 
 
