--- a/css/main.css
+++ b/css/main.css
@@ -134,12 +134,16 @@ body.mainpage > * {
     padding:2em;
     box-sizing: border-box;
     position: relative;
+    background-color:#2d262d;
   }
+
+   
 
   .classgrid li:hover {
     background:#a2f1c1;
     color: #2d262d;
-    transform: rotate(5deg) scale(1.05);
+    transform: rotate(5deg) scale(1.05) translateZ(200px);
+    background-image:none!important;
   }
   
   .classgrid li:nth-child(odd):hover {
