--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ body.mainpage > * {
 
   .classgrid li:hover {
     background-color:#a2f1c1;
-    color: #2d262d;
+    
 
 
   }
@@ -162,12 +162,13 @@ body.mainpage > * {
     justify-content: center;
     padding:2em;
     box-sizing: border-box;
-    background-color:rgba(0,0,0,.5);
+    background-color:rgba(45, 38, 45, 0.79);
     transition: 300ms;
   }
 
   .classgrid li:hover .card-content-wrapper{
-    background-color:rgba(162, 241, 193, 0.9)
+    background-color:rgba(162, 241, 193, 0.9);
+    color: #2d262d;
   }
 
   .classgrid .namelink {
